# lark-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/plans/: loop-feature-enhance.md  loop-search-import.md  loop-sequential-safe.md
.stitch/: code.html
backend/: config.py  main.py
backend/agent/: agent.py
backend/api/: routes.py
backend/lark/: cli_wrapper.py  doc_xml.py  verify_fetch.py
docs/: p1-editable-doc-plan.md  p2-xml-writeback-refactor.md  p3-agent-output-experience-plan.md
gan-harness/: build-report.md  config.md  eval-rubric.md  generator-state.md  spec.md
gan-harness/feedback/: feedback-001.md
tests/: test_agent_events.py  test_agent_stream.py  test_config.py  test_doc_xml.py  test_routes.py  test_search.py
web/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  api.js  api.test.js  appBlockHandlers.js  appBlockHandlers.test.js  blockXml.js  recentDocs.js  style.css
web/src/components/: AboutModal.vue  AgentPane.vue  AppFooter.vue  DocPane.test.js  DocPane.vue  DocSearchPanel.vue  SettingsModal.vue  TopBar.vue  WorkspaceView.vue  docPaneHelpers.js  docPaneHelpers.test.js
web/src/components/artifact/: ArtifactCard.vue  ArtifactDrawer.test.js  ArtifactDrawer.vue  DocumentEditsArtifact.vue  SolutionArtifact.vue
web/src/components/timeline/: ArtifactCard.test.js  ArtifactCard.vue  ConversationTimeline.test.js  ConversationTimeline.vue  StatusStep.vue  ThinkingSummary.vue  TimelineMessage.vue
web/src/composables/: useTimeline.js  useTimeline.test.js
