[project]
name = "lark-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.138.0",
    "httpx[socks]>=0.28.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# 默认 E/F 基础上,加 import 排序、pyupgrade、bugbear
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# agent.py 的 SYSTEM_PROMPT 是中文长文本,行宽规则不适用
"backend/agent/agent.py" = ["E501"]
